2005-09-28  Devashish Sharma  <sdevashish@novell.com>

	* gui/contact-list-editor/e-contact-list-editor.c
	(table_drag_data_received_cb): Added a check that the contact received
	through drag contains an email-id. There is no point in adding a
	contact to the contact-list if the contact has no email-id. This was 
	causing a crash also.

	* gui/widgets/eab-contact-display.c
	(eab_contact_display_render_compact): Added a check for catching null
	email-ids, in case of contact-lists, so that null ids are not passed
	for rendering, which was causing a crash.
	
2005-09-28  Devashish Sharma  <sdevashish@novell.com>

	* gui/component/addressbook-view.c (addressbook_view_init): Added a
	callback, source_selector_key_press_event_callback() so that the
	contact folder can be removed with Del/Delete Key.
	Fixes #233424.

2005-09-28  Tor Lillqvist  <tml@novell.com>

	* gui/component/addressbook.c (get_remember_password): Use
	g_ascii_strcasecmp() instead of strcasecmp(). We are comparing to
	the literal "true", just casefolding ASCII is enough. Also better
	for portability.

2005-09-14  Sushma Rai  <rsushma@novell.com>

	* gui/contact-list-editor/e-contact-list-editor.etspec: Set selection 
	mode to multiple. Related to the patch submitted already to fix #235038.

2005-08-26  Devashish Sharma <sdevashish@novell.com>

	* gui/widgets/e-addressbook-view.etspec: In ETableSpecification source
	column and field name were not in proper order. Because of this all the
	values in view by phone list and view by company were shown in wrong
	columns. Fixes #313124.

2005-08-23  Not Zed  <NotZed@Ximian.com>

	* gui/component/addressbook.c (addressbook_authenticate):
	de-constify uri, and fix its creation logic.
	(load_source_cb): cast for warning.

	* gui/widgets/e-addressbook-view.c: more missing a11y include.

	* gui/widgets/e-minicard-view.c: another missing a11y include.

	* gui/widgets/e-minicard.c: include missing a11y include.
	(e_minicard_activate_editor): fix cast.
